# prosper

./: Cargo.toml  data.mpk.bak
.cargo/: config.toml
assets/: buildings.json  buildings.toml  data.mpk  data.toml  items.json  items.toml  recipes.json  recipes.toml
data/: data.mpk  data.toml  items.toml
data/items/: apparel.toml
src/: data.rs  log.rs  main.rs
src/data/: items.rs  mod.rs  recipes.rs
src/plugin/: data.rs  io.rs  log.rs  map.rs  mod.rs  ui.rs
src/plugin/data/: components.rs  item.rs  mod.rs
src/plugin/data/items/: apparel.rs  mod.rs
src/plugin/io/: event.rs  mod.rs  resource.rs  system.rs
src/plugin/log/: event.rs  layer.rs  mod.rs  resource.rs  system.rs
src/plugin/map/: components.rs  mod.rs
src/plugin/sim/: components.rs  mod.rs
src/plugin/state/: context.rs  mod.rs
src/plugin/ui/: context.rs  initial.rs  log.rs  mod.rs  primary.rs  splash.rs
src/resource/: terminal.rs
src/sim/: mod.rs
src/ui/: log.rs  mod.rs  primary.rs  splash.rs
