[package]
name = "prosper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
    "async-io",
    "serialize"
] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_info",
] }
bevy_embedded_assets = "0.12.0"
better-panic = "0.3.0"
delegate = "0.13.0"
ratatui = "0.29.0"
bevy_common_assets = { version = "0.12.0", features = ["toml"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[target.'cfg(windows)'.build-dependencies]
cross = "0.2.5"

[workspace.metadata.cross.target.x86_64-pc-windows-gnu]
pre-build = ["apt-get update && apt-get --assume-yes install clang"]
